# AppLens-LLM

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
data/: README.md  examples.seed.jsonl  machines.seed.jsonl
docs/: ARCHITECTURE.md  CAPTURE_GUIDE.md  DEVELOPER_GUIDE.md  RESEARCH_SYNTHESIS.md  VGM_TEST_GUIDE.md
examples/: asus-px13-benchmark-suite-run.example.json  asus-px13-fit-report.example.json  asus-px13-model-candidates.example.json  asus-px13-model-fit-scorecard.example.json  gaming-pc-benchmark-record.json  gaming-pc-deployment-plan.json  overnight-prompts.example.txt  runtime-lanes.example.json
schemas/: autoresearch-eval-cases.schema.json  autoresearch-probes.schema.json  autoresearch-run-manifest.schema.json  benchmark-readiness.schema.json  benchmark-record.schema.json  benchmark-suite-result.schema.json  benchmark-suite-run.schema.json  blackboard-record.schema.json  capture-record.schema.json  context-envelope.schema.json  context-quality-record.schema.json  deployment-plan.schema.json  eval-report.schema.json  fit-report.schema.json  hardware-topology.schema.json  local-capability-record.schema.json  machine-profile.schema.json  model-fit-scorecard.schema.json  runtime-lanes.schema.json  training-example.schema.json  workload-artifact.schema.json  workload-profile.schema.json
tests/: test_adrenalin_telemetry.py  test_autoresearch_blackboard.py  test_autoresearch_cli.py  test_autoresearch_commands.py  test_autoresearch_eval.py  test_autoresearch_layout.py  test_autoresearch_manifest.py  test_autoresearch_memory.py  test_bench.py  test_cli.py  (+29 more)
(+57 files in other folders)
