[project]
name = "applens-llm"
version = "0.1.0"
description = "Local LLM outfitter extension for AppLens measurement, benchmarking, and training data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.25.0",
]

[project.scripts]
applens-llm = "applens_llm.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/applens_llm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
